projects/compiler/test/typechecker/lambda/error_unknown_type_for_parameter.1.out
Error at %FILE_NAME%:1:1
Could not determine type for parameter 'a'
  |  a => 123
     ^
Consider adding a type annotation
